--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -218,6 +218,7 @@ pipeline {
     }
 }
 
+// Github commit update functions
 def getRepoURL() {
   sh "git config --get remote.origin.url > .git/remote-url"
   return readFile(".git/remote-url").trim()
